--- a/style.css
+++ b/style.css
@@ -241,3 +241,46 @@ body.projektseite {
     background-repeat: no-repeat;
     background-position: center;
 }
+
+#navigation {
+    width: 100%;
+    height: 100%;
+}
+
+#contentWrapper {
+    transition: all 0.5s ease-in-out, top 0s;
+    z-index: 10;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    visibility: visible;
+    display: flex;
+    justify-content: center;
+    /* backdrop-filter: blur(5px); */
+}
+
+#contentWrapper .content {
+    background: rgba(255, 255, 255, 0.623);
+    transition: all 1800ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
+    width: 90%;
+    padding: 50px;
+    left: 0;
+    right: 0;
+    border-radius: 40px;
+    border: 2px solid #707070;
+    backdrop-filter: blur(40px);
+    max-width: 1200px;
+    min-height: 80%;
+    margin-top: 40px
+}
+
+#contentWrapper.hidden {
+    visibility: hidden;
+    top: 100%;
+}
+
+#contentWrapper.hidden .content {
+    margin-top: 100%;
+}
