--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ html, body {
     position: relative;
 }
 */
-
-
 body.home {
     background-image: url('Image (1).png');
     background-size: cover;
@@ -75,17 +73,6 @@ body.home {
     display: none;
 }
 
-/* Blog Layout "Briefe an Maurice" */
-
-.autor {
-  font-style: italic;
-  margin-top: -1em;
-  margin-bottom: 2em;
-  font-size: 1rem;
-  color: #444;
-}
-
-
 .content {
   font-family: "Space Mono", monospace;
   background: white;
@@ -115,115 +102,9 @@ body.home {
   hyphens: auto;
 }
 
-
-.image-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 16px;
-  margin: 2em 0;
-}
-
-.image-grid img {
-  width: 100%;
-  border-radius: 6px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-}
-
-.lightbox {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.8);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 9999;
-}
-
-.lightbox img {
-  max-width: 90%;
-  max-height: 90%;
-  box-shadow: 0 0 20px rgba(255,255,255,0.3);
-}
-
 .lightbox.hidden {
   display: none;
 }
-
-.lightbox .close {
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  font-size: 3rem;
-  color: white;
-  cursor: pointer;
-}
-
-.arrow {
-  position: absolute;
-  top: 50%;
-  font-size: 3rem;
-  color: white;
-  cursor: pointer;
-  user-select: none;
-  padding: 0 15px;
-  transform: translateY(-50%);
-}
-
-.arrow.left {
-  left: 10px;
-}
-
-.arrow.right {
-  right: 10px;
-}
-
-.arrow:hover {
-  color: #ddd;
-}
-
-/* Egor */
-.intro-block {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-  margin-bottom: 3em;
-  align-items: center;
-}
-
-.intro-img {
-  width: 45%;
-  min-width: 280px;
-  border-radius: 6px;
-}
-
-.intro-text {
-  flex: 1;
-  min-width: 280px;
-  font-size: 1.05rem;
-  line-height: 1.6;
-}
-
-.image-row {
-  display: flex;
-  gap: 16px;
-  margin: 2em 0;
-  justify-content: center;
-  flex-wrap: wrap; /* damit es auf kleineren Bildschirmen umbricht */
-}
-
-.image-row img {
-  width: 30%;
-  border-radius: 6px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  cursor: pointer;
-  object-fit: cover;
-}
-
-
-
 
 
 .combo-zone {
@@ -261,7 +142,7 @@ body.home {
 }
 
 #contentWrapper .contentPage {
-    overflow: scroll;
+    overflow: auto;
     height: 100%;
     padding: 50px;
 }
@@ -280,6 +161,7 @@ body.home {
     margin-top: 40px;
     margin-bottom: 40px;
     height: 100%;
+    overflow: hidden;
 }
 
 #contentWrapper.hidden {
