--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body.home {
 #fullscreenMenu nav li {
     margin: 10px 0; /* Verringert Abstand zwischen Einträgen */
     font-size: 1.2rem; /* Optional kleiner machen */
+    margin-bottom: 1rem;
 }
 
 #fullscreenMenu nav a {
@@ -126,6 +127,16 @@ body.home {
     width: 100%;
     height: 100%;
 }
+
+.kreis-icon {
+  width: 32px; /* oder was du brauchst */
+  height: auto;
+  vertical-align: middle;
+  margin: 0 10px; /* Abstand links und rechts vom Bild */
+}
+
+
+
 
 #contentWrapper {
     transition: all 0.5s ease-in-out, top 0s;
