--- a/projektseiten.css
+++ b/projektseiten.css
@@ -1,4 +1,9 @@
 /* kreiskombi für die unterseiten*/
+@font-face {
+  font-family: 'MartianMono';
+  src: url('/MartianMono.ttf') format("truetype-variations");
+  font-weight: 1 999;
+}
 
 .kreis-duo {
   display: flex;
@@ -192,3 +197,31 @@
   cursor: pointer;
   object-fit: cover;
 }
+
+/*Human Nature */
+.plakate{
+  width: 1500px;
+  margin-left: 6em;
+}
+
+/* Carousel 
+.swiper {
+  width: 100%;
+  max-width: 800px;
+  margin: 3rem auto;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 12px;
+  object-fit: cover;
+}
+*/
