--- a/style.css
+++ b/style.css
@@ -185,7 +185,8 @@ body.home {
 }
 
 #contentWrapper.hidden {
-    /* visibility: hidden; */
+     visibility: hidden; 
+     pointer-events: none;
     transition: all 0.5s ease-in-out;
     top: 100%;
 }
