--- a/style.css
+++ b/style.css
@@ -18,9 +18,22 @@ body {
 }
 
 body.home {
-    background-image: url('Watttextur_ws.png');
+    /* background-image: url('Watttextur_ws.png'); */
     background-size: cover;
     overflow: hidden;
+    color: white;
+}
+
+#bgVideo {
+    position: absolute;
+    z-index: 0;
+    object-fit: cover;
+    width:100%;
+    height:100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    filter: brightness(0.4) sepia(30%);
 }
 
 .menu-toggle {
@@ -30,7 +43,7 @@ body.home {
     z-index: 1100;
     cursor: pointer;
     font-size: 1rem;
-    color: black;
+    color: white;
     padding: 10px;
     line-height: 1.2;
     font-weight: 300;
@@ -116,6 +129,10 @@ body.home {
   display: none;
 }
 
+.movable {
+    filter: brightness(0) invert(1);
+}
+
 
 .combo-zone {
     position: absolute;
@@ -168,20 +185,21 @@ body.home {
 }
 
 #contentWrapper .content {
-    background: rgba(255, 255, 255, 0.623);
+    background: rgba(255, 255, 255, 0.476);
     transition: all 1800ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
     width: 90%;
     left: 0;
     right: 0;
     border-radius: 40px;
     border: 2px solid #707070;
-    backdrop-filter: blur(40px);
+    backdrop-filter: blur(10px);
     max-width: 1200px;
     min-height: 80%;
     margin-top: 40px;
     margin-bottom: 40px;
     height: 100%;
     overflow: hidden;
+    box-shadow: 0 0 30px 5px black;
 }
 
 #contentWrapper.hidden {
