--- a/style.css
+++ b/style.css
@@ -9,10 +9,18 @@ html, body {
 
 */
 @font-face {
-  font-family: 'MartianMono';
-  src: url('/MartianMono.ttf') format("truetype-variations");
-  font-weight: 1 999;
+    font-family: 'MartianMono';
+    src: url('/MartianMono.ttf') format("truetype-variations");
+    font-weight: 1 999;
 }
+
+* {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+}
+
 body {
     font-family: 'MartianMono';
 }
@@ -28,8 +36,8 @@ body.home {
     position: absolute;
     z-index: 0;
     object-fit: cover;
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -83,8 +91,9 @@ body.home {
 }
 
 #fullscreenMenu nav li {
-    margin: 10px 0; /* Verringert Abstand zwischen Einträgen */
-    font-size: 1.2rem; 
+    margin: 10px 0;
+    /* Verringert Abstand zwischen Einträgen */
+    font-size: 1.2rem;
     margin-bottom: 1rem;
 }
 
@@ -94,7 +103,7 @@ body.home {
 }
 
 #fullscreenMenu nav ul li a:hover {
-  color: #999999; 
+    color: #999999;
 }
 
 
@@ -103,36 +112,36 @@ body.home {
 }
 
 .content {
-  font-family: "Space Mono", monospace;
-  background: white;
-  color: #222;
-  padding: 0;
-  margin: 0;
-  overflow-y: auto;
-  height: auto;
+    /* font-family: "Space Mono", monospace; */
+    background: white;
+    color: #222;
+    padding: 0;
+    margin: 0;
+    overflow-y: auto;
+    height: auto;
 }
 
 .page-content {
-  max-width: 900px;
-  margin: 120px auto 60px auto;
-  padding: 0 20px;
-  line-height: 1.6;
-  font-size: 1.05rem;
+    max-width: 900px;
+    margin: 120px auto 100px auto;
+    padding: 0 20px;
+    line-height: 1.6;
+    font-size: 1.05rem;
 }
 
 .blog-content h1 {
-  font-size: 2rem;
-  margin-bottom: 1.5em;
+    font-size: 2rem;
+    margin-bottom: 1.5em;
 }
 
 .blog-content p {
-  margin-bottom: 1.2em;
-  text-align: justify;
-  hyphens: auto;
+    margin-bottom: 1.2em;
+    text-align: justify;
+    hyphens: auto;
 }
 
 .lightbox.hidden {
-  display: none;
+    display: none;
 }
 
 .movable {
@@ -149,7 +158,8 @@ body.home {
 }
 
 
-.combo-zone, .net-close {
+.combo-zone,
+.net-close {
     position: absolute;
     width: 160px;
     height: 160px;
@@ -184,8 +194,8 @@ body.home {
     50% {
         scale: 1;
     }
-   
-   100% {
+
+    100% {
         scale: 1.5;
         /* animation-timing-function: linear(0, 0.225 3%, 0.409 5.7%, 0.562 8.3%, 0.68 10.7%, 0.772 13.1%, 0.809 14.3%, 0.838 15.5%, 0.861 16.7%, 0.877 17.9%, 0.887 19.1%, 0.89 20.3%, 0.888 21.2%, 0.883 22.1%, 0.875 23%, 0.862 24%, 0.826 26%, 0.775 28.1%, 0.716 30.1%, 0.637 32.4%, 0.26 42.2%, 0.175 44.6%, 0.103 46.8%, 0.029 49.4%, -0.03 51.9%, -0.076 54.4%, -0.11 56.9%, -0.13 59%, -0.142 61.2%, -0.146 63.5%, -0.143 65.9%, -0.136 67.9%, -0.124 70.2%, -0.051 80.6%, -0.034 83.4%, -0.021 86%, -0.011 89%, -0.004 92.1%, -0.001 95.5%, 0); */
     }
@@ -207,10 +217,10 @@ body.home {
 }
 
 .kreis-icon {
-  width: 31px; 
-  height: auto;
-  vertical-align: middle;
-  margin: 0 10px; 
+    width: 31px;
+    height: auto;
+    vertical-align: middle;
+    margin: 0 10px;
 }
 
 
@@ -255,8 +265,8 @@ body.home {
 }
 
 #contentWrapper.hidden {
-     visibility: hidden; 
-     pointer-events: none;
+    visibility: hidden;
+    pointer-events: none;
     transition: all 0.5s ease-in-out;
     top: 100%;
 }
@@ -272,4 +282,5 @@ body.home {
     position: fixed;
     right: 40px;
     top: 40px;
+    fill: #2f2f2f;
 }
